@@ -34,6 +34,7 @@
     <File name="./Test/Examples/TreeView.xml" subtype="Code" buildaction="Nothing" />
     <File name="./DocumentUndoManager.cs" subtype="Code" buildaction="Compile" />
     <File name="./EditAction.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Utils.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
